[gd_scene load_steps=8 format=3 uid="uid://c7fors66tpr7g"]

[ext_resource type="Script" path="res://ui/title_screen/title_screen.gd" id="1_m0g57"]
[ext_resource type="Texture2D" uid="uid://7nu8lvoqsb0c" path="res://assets/logo.png" id="2_7bst2"]
[ext_resource type="PackedScene" uid="uid://b0briirwr8btc" path="res://ui/title_screen/new_game_button.tscn" id="3_cfqpm"]
[ext_resource type="PackedScene" uid="uid://rfollf2yfxhs" path="res://ui/title_screen/load_button.tscn" id="4_qhlj6"]
[ext_resource type="PackedScene" uid="uid://b1i2dwtrdcvvo" path="res://ui/title_screen/options_button.tscn" id="5_ohu8a"]
[ext_resource type="PackedScene" uid="uid://gbuuej4pc8so" path="res://ui/title_screen/quit_button.tscn" id="6_qbfj5"]
[ext_resource type="PackedScene" uid="uid://dgqa4320xelr6" path="res://ui/fade.tscn" id="7_01r1b"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m0g57")

[node name="Menu" type="VBoxContainer" parent="."]
offset_left = 100.0
offset_top = 80.0
offset_right = 1820.0
offset_bottom = 1000.0

[node name="Logo" type="TextureRect" parent="Menu"]
offset_right = 1720.0
offset_bottom = 100.0
texture = ExtResource("2_7bst2")
stretch_mode = 3

[node name="Center" type="HBoxContainer" parent="Menu"]
offset_top = 104.0
offset_right = 1720.0
offset_bottom = 920.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/Center"]
offset_top = 282.0
offset_right = 1720.0
offset_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="NewGame" parent="Menu/Center/Buttons" instance=ExtResource("3_cfqpm")]
offset_bottom = 60.0
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Load")
flat = false

[node name="Load" parent="Menu/Center/Buttons" instance=ExtResource("4_qhlj6")]
offset_top = 64.0
offset_bottom = 124.0
focus_neighbor_top = NodePath("../NewGame")
focus_neighbor_bottom = NodePath("../Options")
flat = false

[node name="Options" parent="Menu/Center/Buttons" instance=ExtResource("5_ohu8a")]
offset_top = 128.0
offset_bottom = 188.0
focus_neighbor_top = NodePath("../Load")
focus_neighbor_bottom = NodePath("../Quit")
flat = false

[node name="Quit" parent="Menu/Center/Buttons" instance=ExtResource("6_qbfj5")]
offset_top = 192.0
offset_bottom = 252.0
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../NewGame")
flat = false

[node name="Fade" parent="." instance=ExtResource("7_01r1b")]

[connection signal="pressed" from="Menu/Center/Buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Menu/Center/Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Menu/Center/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Center/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="fade_finished" from="Fade" to="." method="_on_fade_fade_finished"]
